fixed keyboard (overlapping) problem

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 .main-body {
     height: 100vh;
+    min-height: 640px;
     background: linear-gradient(150deg, #DF98FA, #9055FF);
     background-image: url(bg.jpg);
     background-size: cover;
@@ -128,6 +129,16 @@ input[type="email"]:focus {
 @media screen and (max-width: 440px) {
     .box img {
         height: 5rem;
+    }
+    /* .main-body .sdg-container {
+        position: absolute;
+        margin-top: 3rem;
+    } */
+}
+
+@media screen and (max-height: 670px) {
+    .main-body .sdg-container {
+        display: none;
     }
 }
 
